test/test-ingress.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-readonly
  namespace: test
data:
  init.sh: |
    #!/bin/sh
    set -x
    echo "<html><head><title>Init container is $(cat /etc/redhat-release)</title></head><body><h1>${HOSTNAME} $(hostname -I | awk '{print $1}')</h1></body></html>" > /data/index.html
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ingress-nginx
  namespace: test
spec:
  selector:
    matchLabels:
      app: ingress-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      initContainers:
      - name: text-data
        image: centos:latest
        command:
        - "/bin/sh"
        - "/test-readonly/init.sh"
        workingDir: /test-readonly
        volumeMounts:
        - name: test-readonly
          mountPath: /test-readonly
        - name: text-data
          mountPath: /data
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: text-data
          mountPath: /usr/share/nginx/html
      volumes:
      - name: text-data
        emptyDir: {}
      - name: test-readonly
        configMap:
          name: test-readonly
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: test
  labels:
    app: ingress-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: ingress-nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: test
spec:
  rules:
  - http:
      paths: 
      - backend:
          serviceName: ingress-nginx-api
          servicePort: 80
