test/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test
spec:
  containers:
  - name: test-pod
    image: centos:latest
    command: ["sh", "-c", "tail -f /dev/null"]
