test/webhook-site.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webhook-site
  namespace: iris
  labels:
    app: webhook-site
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webhook-site
    spec:
      containers:
      - name: webhook-site
        image: dahyphenn/webhook.site:latest
        ports:
         - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-site
  namespace: iris
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webhook-site
  type: LoadBalancer
